fix: Card footer not centered without description

--- a/portfolio/src/app/components/molecules/card/card.module.css
+++ b/portfolio/src/app/components/molecules/card/card.module.css
@@ -24,6 +24,6 @@
   z-index: 10;
 }
 
-.cardFooter h3 {
-  margin-bottom: 2rem;
+.cardFooter p {
+  margin-top: 2rem;
 }
